sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
	def trié() {
		for (i<-0 to getNombreValeurs()-2) {
			if (!plusPetit(i,i+1)) { 
				return false
			}
		}
		return true
	}

	while (!trié) {
		for (i <- 0 to getNombreValeurs()-2) {
			if (!plusPetit(i,i+1)) {
				echange(i,i+1)
			}
		}
	}
}
